--- a/custom-madoc-theme/view/layout/layout.phtml
+++ b/custom-madoc-theme/view/layout/layout.phtml
@@ -5,14 +5,13 @@ $this->headMeta()->setCharset('utf-8');
 $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1');
 $this->headTitle($this->setting('installation_title', 'Madoc platform'))->setSeparator(' · ');
 $this->headLink()->prependStylesheet($this->assetUrl('css/style.css'));
-$this->headLink()->prependStylesheet('//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700');
 $this->headLink()->prependStylesheet('//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
 $this->trigger('view.layout');
 $title = $this->pageTitle($site->title());
 $logo = $this->themeSettingAssetUrl('logo');
 if ($logo):
-    $title = '<img src="' . $this->escapeHtml($logo) . '">';
+    $title = '<img src="' . $this->escapeHtml($logo) . '" alt="' . $this->translate('site logo') . '">';
 endif;
 ?>
 <?php echo $this->doctype(); ?>
@@ -31,7 +30,7 @@ endif;
     <div class="site-details">
         <?php if ($this->themeSetting('logo')): ?>
             <a href="<?php echo $site->url(); ?>" class="site-title"><img
-                    src="<?php echo $this->themeSettingAssetUrl('logo'); ?>" title="Logo"></a>
+                        src="<?php echo $this->themeSettingAssetUrl('logo'); ?>" title="<?php echo $this->translate('Logo') ?>"></a>
             <?php if ($this->themeSetting('show_title_and_logo')): ?>
                 <p class="site-name"><?php echo $site->title(); ?></p>
             <?php endif; ?>
